# deal-hunter

./: .env.example  .gitignore  Containerfile  Makefile  README.md  pyproject.toml
deploy/openshift/: agent-configmap.yaml  agent-cronjob.yaml  agent-pvc.yaml  agent-secret.yaml  kustomization.yaml  namespace.yaml  vllm-inferenceservice.yaml  vllm-servingruntime.yaml
mock_data/: amazon_bosch_dishwasher.json  bestbuy_bosch_dishwasher.json  costco_bosch_dishwasher.json  walmart_bosch_dishwasher.json
src/deal_hunter/: __main__.py  app.py  cli.py  config.py  models.py  trace.py
src/deal_hunter/graph/: builder.py  edges.py  state.py
src/deal_hunter/graph/nodes/: analyzer.py  confirmer.py  reporter.py  searcher.py
src/deal_hunter/llm/: provider.py
src/deal_hunter/reporting/: markdown.py
src/deal_hunter/scheduler/: runner.py
src/deal_hunter/search/: __init__.py  base.py  mock_client.py  serpapi_client.py
src/deal_hunter/storage/: history.py
tests/: test_models.py  test_reporting.py  test_search.py
