[project]
name = "deal-hunter"
version = "0.1.0"
description = "AI agent for comparing product prices across retail websites"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-search-results>=2.4",
    "rich>=13.0",
    "apscheduler>=3.10,<4.0",
    "gradio>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deal_hunter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
src = ["src"]
line-length = 120
